@@ -35,7 +35,7 @@
 			<a href="#newcomp">New</a>
 			<a href="#removecomp">Remove</a>
 		</div>
-		<ul></ul>
+		<ul class="list"></ul>
 	</div>
 	
 	<div id="entities">
@@ -43,7 +43,7 @@
 			<a href="#newent">New</a>
 			<a href="#removeent">Remove</a>
 		</div>
-		<ul></ul>
+		<ul class="list"></ul>
 	</div>
 	
 	<div id="assets">
@@ -59,7 +59,7 @@
 			<a href="#newscene">New</a>
 			<a href="#removescene">Remove</a>
 		</div>
-		<ul></ul>
+		<ul class="list"></ul>
 	</div>
 </div>
 </td><td id="layout-right">
